# contextpert

./: .gitignore  README.md  chembl_utils.py  dummy_sm_submission.py  evaluate.py  morgan_sm_submission.py  pert_context.ipynb  pyproject.toml  requirements.txt  sync.sh  test_multitask_installation.py  unseen_gene_embs.py  unseen_pert.ipynb  unseen_pert_plot.ipynb
contextpert/: __init__.py  benchmarks.py  evaluate.py  utils.py
data/: README.md  brd_to_chembl.py
data_download/: 01_1_download_lincs.sh  01_2_process_lincs.py  01_3_filter_trt_cp_qc.py  01_4_filter_trt_sh_qc.py  01_5_gene_map.py  01_8_pert_gene_target.py  01_9_trt_sh_targets.py  02_2_drug_target_pairs.py  02_3_disease_target_pairs.py  02_4_disease_drug_triples.py  02_5_filter_diseases.py  02_process_lincs.py  03_1_create_lincs_disease_eval.py  03_2_create_lincs_drug_target_eval.py  03_2_create_lincs_drug_target_set.py  03_3_copy_labels_to_package.py  04_1_gene_cols.py  04_2_transcriptome_embeddings.py  04_3_run_cell_embedding.sh  04_4_add_targets_to_embeddings.py  04_disease_drug_triples.py  04_disease_target_pairs.py  04_drug_target_pairs.py  05_download_hgnc.sh  06_brd_to_chembl.py  07_chembl_lincs_merge.py  08_pert_gene_target.py  09_create_lincs_target_set.py  11_filter_trt_sh_qc.py  12_create_lincs_drug_target_set.py  13_aido_cell_lincs_embedding.py  99_aido_cell_embedding.py  README.md  make_ctrls.py  run_all_aido_cell_models.sh
drug_target_mapping_viz/: 01_clean_data.py  02_plot_data.py  clean_data_expr.py  clean_data_networks.py  dual_plot.py  dual_visualization.html
quickstart/: example_ddr.py  (+1 more)
(+72 files in other folders)
